--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
+    "config": "^3.3.3",
     "express": "^4.17.1",
     "fawn": "^2.1.5",
     "joi": "^17.3.0",
     "joi-objectid": "^3.0.1",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.20",
     "mongoose": "^5.11.9",
     "nodemon": "^2.0.6"
   },
